# learning-monorepo

./: .bazelproject  .bazelrc  .gitignore  BUILD.bazel  BUILD.md  CLAUDE.md  MODULE.bazel  README.md  deck-round3.html
apps/model_serving/: main.py  pyproject.toml  schemas.py
apps/model_serving/docs/: 00_interview_cheatsheet.md  01_gpu_vram.md  02_precision.md  03_diffusion_models.md  04_serving_concepts.md  05_optimizations.md  06_interview_qa.md
apps/pagination-demo/: BUILD.bazel  pom.xml
apps/pagination-demo/src/main/java/com/demo/pagination/: CursorPageResponse.java  DataSeeder.java  PageResponse.java  PaginationDemoApplication.java  Product.java  ProductController.java  ProductRepository.java  ProductService.java
apps/pagination-demo/src/main/resources/: application.properties
apps/uber/: CLAUDE.md  STEPS.md  STEPS_1.md  STEPS_2.md  STEPS_3.md  STEPS_4.md  STEPS_5.md  STEPS_6.md  STEPS_7.md  STEPS_8.md  STEPS_9.md  pom.xml  setup.sh
apps/uber/eats-service/: BUILD.bazel  pom.xml
apps/uber/eats-service/src/main/java/com/uber/eats/: EatsServiceApplication.java  KafkaProducerConfig.java  MenuItem.java  MinioConfig.java  Order.java  OrderController.java  OrderRepository.java  OrderService.java  Restaurant.java  RestaurantController.java  RestaurantRepository.java  RestaurantService.java
apps/uber/eats-service/src/main/resources/: application.properties
challenges/aie/: 00_sdk_basics.md  01_tools.md  02_agent_loop.md  03_memory.md  04_multi_agent.md  05_production.md  06_harness.md  README.md
challenges/aie/agentic_ai_app/: main.py  pyproject.toml
challenges/aie/agentic_ai_app/01_tools/: demo.py
challenges/aie/agentic_ai_app/02_agent_loop/: demo.py  tools.py
challenges/aie/agentic_ai_app/03_memory/: demo.py  memory.py
challenges/aie/agentic_ai_app/04_multi_agent/: agents.py  demo.py  report_state.py  tools.py
challenges/aie/agentic_ai_app/05_production/: agent.py  budget_demo.py  eval.py  tools.py
challenges/aie/agentic_ai_app/sdk_basics/: demo.py
challenges/aie/agentic_ai_app/shared/: budget.py  observability.py
challenges/leetcode/LongestContiguousSubArrayWithAbsDiffLessThanLimit/: Notes.md  Solution.java
challenges/leetcode/MeetingsRoomsIII/: Notes.md  Solution.java
challenges/leetcode/MinOpsToRedNum2Zero/: Solution.java
challenges/leetcode/MinOpsToReduceNumberToZero/: Solution.java
challenges/leetcode/MinimumKnightMoves/: Notes.md  Solution.java
challenges/leetcode/NumberOfIslandsII/: Notes.md  Solution.java
challenges/leetcode/PaintingAGridWithThreeColors/: Notes.md  Solution.java
challenges/leetcode/ShuffleAnArray/: Solution.java
challenges/leetcode/SortedSquares/: Solution.java
challenges/leetcode/SplitArrayLargestSum/: Notes.md  Solution.java
challenges/leetcode/designHitCounter/: HitCounter.java  Solution.java
challenges/lld/car_rental/: CarRentalSystem.java
challenges/lld/file_system/: FileSystem.java
challenges/lld/food_ordering/: FoodOrderingSystem.java
challenges/lld/hit_counter/: HitCounter.java
challenges/lld/leaderboard/: Leaderboard.java
challenges/lld/meeting_room/: MeetingRoomSystem.java
challenges/lld/movie_booking/: MovieBookingSystem.java
challenges/lld/parking_lot/: ParkingLot.java
challenges/lld/text_editor/: TextEditor.java
challenges/lld/train_platform/: TrainPlatformSystem.java
challenges/ml_inference/: 01_attention.py  04_gpu_kernels.py  05_speculative_decoding.py  06_distributed_inference.py  07_continuous_batching.py  08_recommender_serving.py  09_coding_problems.py  10_system_design.md  CLAUDE.md  CURRICULUM.md  NOTES.md  interview_reference.md  sciforium_prep_session.md
challenges/ml_inference/notebooks/track_a_llm/: a01_attention.md  a02_kv_cache.md  a03_flash_attention.md  a04_quantization.md  a05_speculative_decoding.md  a06_continuous_batching.md  a07_distributed_inference.md  a08_moe_inference.md
challenges/ml_inference/notebooks/track_b_gpu/: b01_gpu_architecture.md  b02_cuda_basics.md  b03_triton_basics.md  b04_memory_optimization.md  b05_triton_flash_fwd.md  b06_triton_flash_bwd.md
challenges/ml_inference/notebooks/track_c_ads/: c01_two_tower.md  c02_dcn_ranker.md  c03_logistic_regression.md  c04_gbdt.md  (+3 more)
challenges/ml_inference/old_work/: 02_kv_cache.py  03_quantization.py  11_gpu_kernels_deep.py
challenges/mle/: CLAUDE.md  STUDY_PLAN.md
challenges/rest-api-go/: go.mod  main.go  test.http
docs/algorithms/: bfs.md  binary_search.md  dfs.md  dynamic_programming.md  mst.md  shortest_path.md  topological_sort.md  tree_traversals.md
docs/data_structures/: arrays_and_lists.md  binary_numbers.md  graph_abstraction.md  maps_and_sets.md  monotonic_stack.md  queues_and_stacks.md  range_minimum_query.md  treemap.md  treemap_treeset.md  union_find.md
docs/food/: pistachio-tres-leches.md
docs/lld/: concurrency.md  design_patterns.md  patterns_distributed.md  patterns_tier1.md  patterns_tier2.md
docs/system_design/: caching.md  indexing.md  latency_reference.md  message_queues.md  pagination.md  proximity_service.md  qps_calculations.md  sharding.md
docs/system_design/uber/: ads.md  eats.md  rate_limiter.md  rides.md
docs/system_design/walmart/: 00-index.md  01-hld.md  02-lld.md  03-marty-fe.md  04-marty.md  05-darpa.md  06-sp-ace.md  07-sp-buddy.md  08-sp-crs.md  09-radpub-v2.md  10-swag.md  11-midas-spade.md  12-midas-spector.md  13-abram.md  14-sparkle.md  15-davinci.md  16-sp-adserver-feast.md  17-element-adserver-feast.md  18-element-davinci.md  19-element-ss-inference.md  20-e2e-scenarios.md  21-troas-flow.md  22-ad-relevance-flow.md  23-feast-design.md  24-davinci-deep-dive.md  25-darwin.md  26-insspire-team.md  27-roar-v2.md  28-cts.md  deck-round3.html  deck-round3.md  deck-troas-v2.html  deck-troas.html  notes-troas-v2.md
docs/vacations/: colorado_master_itinerary.md
docs/vacations/shelf/: anniversary_2026_jun.md  colorado_anniversary_deep_dive.md  colorado_vs_moab_clean.md  moab_adventure_deep_dive.md  moab_itinerary_e2e.md  moab_vs_sedona.md
infra/: setup.sh
infra/configs/: haproxy.cfg  nginx.conf
shared/graphs/: BUILD.bazel  Graph.java
(+33 files in other folders)
