module(
    name = "learning_monorepo",
    version = "0.0.0",
)

# Language toolchains — add as needed per project

# Python
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# Go
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Rust
bazel_dep(name = "rules_rust", version = "0.61.0")
