module(
    name = "learning_monorepo",
    version = "0.0.0",
)

# Language toolchains — add as needed per project

# Python
bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# Go
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.42.0")

# Rust
bazel_dep(name = "rules_rust", version = "0.61.0")

# Java & Spring Boot (Uber Mini-Backend)
bazel_dep(name = "rules_jvm_external", version = "6.3")
bazel_dep(name = "rules_java", version = "8.3.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-mongodb:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-jpa:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-redis:3.2.3",
        "org.springframework.kafka:spring-kafka:3.1.2",
        "org.postgresql:postgresql:42.7.2",
        "com.amazonaws:aws-java-sdk-s3:1.12.670",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
