module(
    name = "learning_monorepo",
    version = "0.0.0",
)

# Language toolchains — add as needed per project

# C++ (Required for Bazel 9 as CcInfo is no longer a built-in)
bazel_dep(name = "rules_cc", version = "0.2.17")

# Android (Fixes transitive dependency issues in Bazel 9)
bazel_dep(name = "rules_android", version = "0.7.1")

# Python
bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

# Go
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.50.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.12")

# Rust
bazel_dep(name = "rules_rust", version = "0.69.0")

# Java & Spring Boot (Uber Mini-Backend)
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_java", version = "9.6.1")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.springframework.boot:spring-boot-starter-web:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-mongodb:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-jpa:3.2.3",
        "org.springframework.boot:spring-boot-starter-data-redis:3.2.3",
        "org.springframework.kafka:spring-kafka:3.1.2",
        "org.postgresql:postgresql:42.7.2",
        "com.amazonaws:aws-java-sdk-s3:1.12.670",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")
