[project]
name = "model-serving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "diffusers>=0.38.0",
    "fastapi>=0.137.1",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
