load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "pagination_demo_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_data_jpa",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_jpa",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_postgresql_postgresql",
    ],
)

java_binary(
    name = "pagination-demo",
    main_class = "com.demo.pagination.PaginationDemoApplication",
    runtime_deps = [":pagination_demo_lib"],
)
