load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name = "eats_lib",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**"]),
    deps = [
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_s3",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_apache_kafka_kafka_clients",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_starter_data_mongodb",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_data_spring_data_commons",
        "@maven//:org_springframework_data_spring_data_mongodb",
        "@maven//:org_springframework_kafka_spring_kafka",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_web",
    ],
)

java_binary(
    name = "eats-service",
    main_class = "com.uber.eats.EatsServiceApplication",
    runtime_deps = [":eats_lib"],
)
