[project]
name = "agentic-ai-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "requests>=2.0.0",
    "duckduckgo-search>=6.0.0",
    "ddgs>=9.14.4",
    "sentence-transformers>=5.5.1",
]
